Fix background clipping issues on menu

--- a/apps/nerves_hub_www/assets/css/_navigation.scss
+++ b/apps/nerves_hub_www/assets/css/_navigation.scss
@@ -76,6 +76,7 @@ nav.navbar {
   }
 
   .help-text {
+    background-color: var(--black);
     margin-top: 1.5rem;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
